# Practice-CMake

./: .gitignore  CMakeLists.txt  README.md  TutorialConfig.h.in  main.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
learning_cmake/step1/: CMakeLists.txt
learning_cmake/step2/: CMakeLists.txt  README.md
learning_cmake/step2/src/: CMakeLists.txt
learning_cmake/step3/: CMakeLists.txt  README.md
learning_cmake/step3/src/: CMakeLists.txt  hello.cpp  hello.h
learning_cmake/step4/: CMakeLists.txt  README.md
learning_cmake/step4/include/hello/: hello.h
learning_cmake/step4/lib/: libhello.so.1.2
learning_cmake/step4/src/: CMakeLists.txt  main.cpp
learning_cmake/step5/: CMakeLists.txt  ReADME.md
